# Physics-Simulations

./: .gitignore  README.md
icing-model/: CMakeLists.txt  README.md
icing-model-cluster-algorithms/: CMakeLists.txt  README.md
icing-model-cluster-algorithms/include/: ising_model.h
icing-model-cluster-algorithms/scripts/: plotting.py
icing-model-cluster-algorithms/src/: ising_lattice.cpp  main.cpp  metropolis.cpp  run_multiple.cpp  store_data.cpp  swedsen_wang.cpp  wolff.cpp
icing-model/include/: icing_model.h
icing-model/scripts/: plotting.py
icing-model/src/: icing_lattice.cpp  main.cpp  run_multiple.cpp  store_data.cpp
molecular-dynamics/: README.md  molecules.cpp  particles_w_thermostat.cpp  particles_w_thermostat_extended.cpp  requirements.txt
particle-dynamics/: README.md  particles  particles.cpp  requirements.txt
